--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,6 @@
-<header>
-  <h1>{{site.title}}</h1>
+<header style="margin-top:2rem; margin-bottom:2.5rem">
+  <hgroup>
+    <h2>{{site.title}}</h2>
+    <p>{{site.description}}</p>
+  </hgroup>
 </header>
