--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <p style="font-size:.75rem">&copy; 2024 {{site.title}} &mdash; All Rights Reserved</p>
+  <p style="font-size:.75rem">&copy; 2024 <a href="https://bigcanoedeals.com">{{site.title}}</a>, LLC &mdash; All Rights Reserved</p>
 </footer>
