Removed Bootstrap Sass in hopes it will build on gh-pages.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,10 +2,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta itemprop="name" content="Bog Canoe Deals">
+    <meta itemprop="name" content="Big Canoe Deals">
     <meta itemprop="description" content="Great deals around Big Canoe and Marble Hill, GA">
-    <meta itemprop="image" content="/images/canoe.png">
+    <meta itemprop="image" content="/images/big-canoe-deals-logo.png">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
