Added a bunch of advertisers.

--- a/_includes/ad-stack.html
+++ b/_includes/ad-stack.html
@@ -6,27 +6,17 @@
             Cards can also be "short" or "tall". Tall cards include text. Short cards are just an image.
         -->
         {% for item in site.data.list %}
-
-        {% if item.width == 1 %}
-            {% assign colWidth = "3" %}
-        {% elsif item.width == 2 %}
-            {% assign colWidth = "6" %}
-        {% elsif item.width == 3 %}
-            {% assign colWidth = "9" %}
-        {% else %}
-            {% assign colWidth = "12" %}
-        {% endif %}
-        <div class="ad-card col-{{ colWidth }}">
+        <div class="ad-card col-{{ item.width }}">
             <div class="card">
                 <a href="{{ item.url }}"><img src="/images/client/{{ item.image }}" class="card-img-top" alt="{{ item.name }}"></a>
                 {% if item.height == "tall" %}
                 <div class="card-body">
                     <p class="card-text">{{ item.text }}</p>
                 </div>
-                <div class="card-footer">
-                    <small class="text-muted"><a href="{{ item.link }}">Visit {{ item.name }}</a></small>
-                </div>
                 {% endif %}
+                <div class="card-footer">
+                    <small class="text-muted"><a href="{{ item.link }}">{{ item.deal | default: 'Mention BCD for discount' }}</a></small>
+                </div>
             </div>
         </div>
         {% endfor %}
